--- a/public/frontend-assets/css/style.css
+++ b/public/frontend-assets/css/style.css
@@ -5671,5 +5671,5 @@ height: 100% !important;
     
     border: 4px solid #000;
     border-radius: 10px;
-    padding: 30px;
+    padding: 20px 5px 20px 30px;
 }
