update the design according to doc file

--- a/public/frontend-assets/assets/css/stylee209.css
+++ b/public/frontend-assets/assets/css/stylee209.css
@@ -6056,7 +6056,7 @@ footer a {
 
 .box-pagination-fleet {
   position: relative;
-  margin-top: 60px;
+  /* margin-top: 60px; */
 }
 
 .swiper-button-prev-fleet {
