--- a/public/frontend-assets/css/style.css
+++ b/public/frontend-assets/css/style.css
@@ -487,6 +487,9 @@ hr {
 .mb-120 {
     margin-bottom: 120px !important;
 }
+.pt-40 {
+    padding-top: 40px !important;
+}
 .pt-60 {
     padding-top: 60px !important;
 }
